--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@types/react": "^16.9.34",
     "@types/react-native": "^0.62.7",
     "@types/react-test-renderer": "^16.9",
+    "@types/shortid": "^0.0.29",
     "@types/styled-components": "^5.1.0",
     "abort-controller": "^3.0.0",
     "apsl-react-native-button": "^3.1.1",
