--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
     "build": "rm -rf ./dist && tsc",
     "codecov": "codecov",
     "tsc": "tsc",
+    "cp:config": "cp config.sample.ts config.ts",
     "start": "expo start",
     "production": "expo start --no-dev",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "eject": "expo eject",
-    "test": "node node_modules/jest/bin/jest.js",
+    "test": "jest",
     "lint": "eslint src --ext .ts,.tsx,.js,.jsx",
     "predeploy": "expo build:web",
     "deploy-hosting": "npm run predeploy && firebase deploy --only hosting"
