--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "@types/i18n-js": "^3.0.3",
     "@types/jest": "^26.0.5",
     "@types/react": "^16.9.43",
-    "@types/react-native": "^0.63.1",
+    "@types/react-native": "^0.62",
     "@types/react-test-renderer": "^16.9",
     "@types/shortid": "^0.0.29",
     "@types/styled-components": "^5.1.1",
@@ -85,6 +85,7 @@
     "jest": "^26.1.0",
     "jest-expo": "^38.0.2",
     "jest-expo-ts": "^22.0.1",
+    "jest-environment-node": "^26.1.0",
     "jest-fetch-mock": "^3.0.3",
     "jest-styled-components": "^7.0.2",
     "jetifier": "^1.6.6",
