--- a/package.json
+++ b/package.json
@@ -24,79 +24,79 @@
   "dependencies": {
     "@expo/react-native-action-sheet": "^3.8.0",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "^5.7.2",
-    "@react-navigation/core": "^5.12.1",
-    "@react-navigation/native": "^5.7.1",
-    "@react-navigation/stack": "^5.7.1",
+    "@react-navigation/bottom-tabs": "^5.9.0",
+    "@react-navigation/core": "^5.12.4",
+    "@react-navigation/native": "^5.7.4",
+    "@react-navigation/stack": "^5.9.1",
     "Base64": "^1.1.0",
-    "date-fns": "^2.15.0",
-    "expo": "^38.0.8",
+    "date-fns": "^2.16.1",
+    "expo": "^39.0.3",
     "expo-apple-authentication": "~2.2.1",
-    "expo-auth-session": "^1.4.1",
-    "expo-constants": "^9.1.1",
-    "expo-crypto": "~8.2.1",
-    "expo-image-manipulator": "^8.2.1",
-    "expo-image-picker": "^8.3.0",
-    "expo-localization": "~8.2.1",
-    "expo-web-browser": "^8.3.1",
+    "expo-auth-session": "^2.0.0",
+    "expo-constants": "^9.2.0",
+    "expo-crypto": "~8.3.0",
+    "expo-image-manipulator": "^8.3.0",
+    "expo-image-picker": "^9.1.1",
+    "expo-localization": "~9.0.0",
+    "expo-web-browser": "^8.5.0",
     "firebase": "7.9.0",
     "i18n-js": "^3.7.1",
-    "immer": "^7.0.5",
+    "immer": "^7.0.9",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
     "react-native-appearance": "~0.3.4",
-    "react-native-gesture-handler": "~1.6.1",
-    "react-native-reanimated": "~1.9.0",
-    "react-native-safe-area-context": "~3.0.7",
-    "react-native-screens": "~2.9.0",
+    "react-native-gesture-handler": "~1.7.0",
+    "react-native-reanimated": "~1.13.1",
+    "react-native-safe-area-context": "3.1.4",
+    "react-native-screens": "~2.10.1",
     "react-native-svg": "12.1.0",
-    "react-native-web": "0.12",
-    "react-native-webview": "^10.3.2",
-    "react-navigation-stack": "^2.8.2",
+    "react-native-web": "0.13",
+    "react-native-webview": "10.7.0",
+    "react-navigation-stack": "^2.8.3",
     "sentry-expo": "^2.1.2",
     "shortid": "^2.2.15",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.10.5",
-    "@babel/core": "^7.10.5",
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
     "@babel/preset-typescript": "^7.10.4",
-    "@dooboo/eslint-config": "^0.4.3",
-    "@expo/webpack-config": "^0.12.20",
+    "@dooboo/eslint-config": "^0.5.4",
+    "@expo/webpack-config": "^0.12.35",
     "@svgr/webpack": "^5.4.0",
-    "@testing-library/jest-native": "^3.1.0",
-    "@testing-library/react-native": "^5.0.3",
+    "@testing-library/jest-native": "^3.4.2",
+    "@testing-library/react-native": "^7.0.2",
     "@types/expo": "^33.0.1",
     "@types/i18n-js": "^3.0.3",
-    "@types/jest": "^26.0.5",
-    "@types/react": "^16.9.43",
-    "@types/react-native": "^0.62",
+    "@types/jest": "^26.0.14",
+    "@types/react": "^16.9.49",
+    "@types/react-native": "^0.63",
     "@types/react-test-renderer": "^16.9",
     "@types/shortid": "^0.0.29",
-    "@types/styled-components": "^5.1.1",
+    "@types/styled-components": "^5.1.3",
     "abort-controller": "^3.0.0",
     "apsl-react-native-button": "^3.1.1",
-    "babel-jest": "^26.1.0",
-    "babel-preset-expo": "^8.2.3",
+    "babel-jest": "^26.3.0",
+    "babel-preset-expo": "^8.3.0",
     "babel-preset-react-native": "4.0.1",
-    "codecov": "^3.7.1",
-    "eslint": "^7.5.0",
-    "jest": "^26.1.0",
-    "jest-expo": "^38.0.2",
+    "codecov": "^3.7.2",
+    "eslint": "^7.10.0",
+    "jest": "^26.4.2",
+    "jest-environment-node": "^26.3.0",
+    "jest-expo": "^39.0.0",
     "jest-expo-ts": "^22.0.1",
-    "jest-environment-node": "^26.1.0",
     "jest-fetch-mock": "^3.0.3",
-    "jest-styled-components": "^7.0.2",
+    "jest-styled-components": "^7.0.3",
     "jetifier": "^1.6.6",
-    "metro-react-native-babel-preset": "^0.60.0",
+    "metro-react-native-babel-preset": "^0.63.0",
     "mock-cloud-firestore": "^0.12.0",
-    "prettier": "^2.0.5",
+    "prettier": "^2.1.2",
     "react-native-svg-transformer": "^0.14.3",
     "react-native-typescript-transformer": "^1.2.13",
     "react-test-renderer": "^16.13.1",
-    "ts-jest": "^26.1.3",
-    "tslib": "^2.0.0",
-    "typescript": "^3.9.7"
+    "ts-jest": "^26.4.0",
+    "tslib": "^2.0.1",
+    "typescript": "^4.0.3"
   }
 }
